--- a/test1.html
+++ b/test1.html
@@ -40,7 +40,7 @@
         LocalVar.lstLocation = [
             new LocationInfo('延岡AJS', 32.5706131, 131.6725814, '延岡のAJS', 'https://www.google.co.jp/maps/place/%E5%AE%AE%E5%B4%8E%E7%9C%8C%E5%BB%B6%E5%B2%A1%E5%B8%82%E6%97%AD%E7%94%BA2-1-3'),
             new LocationInfo('水島AJS', 34.5029024, 133.7506183, '水島のAJS', 'https://www.google.co.jp/maps/place/%E5%B2%A1%E5%B1%B1%E7%9C%8C%E5%80%89%E6%95%B7%E5%B8%82%E6%BD%AE%E9%80%9A3-13'),
-            new LocationInfo('AJS', 35.6959033,139.688014, '東京のAJS', 'https://www.ajs.co.jp/'),
+            new LocationInfo('AJS', 35.6959033, 139.688014, '東京のAJS', 'https://www.ajs.co.jp/'),
         ];
 
         function initMap() {
@@ -51,8 +51,8 @@
             // マップの初期位置
             // ------------------------
             const map = new google.maps.Map(document.querySelector("#map"), {
-                center: { lat: 35.34, lng: 134.59 },
-                zoom: 5,
+                center: { lat: 34.34, lng: 134.59 },
+                zoom: 7,
             });
             // ------------------------
             // マーカーの配置
@@ -80,13 +80,22 @@
                         shoudFocus: false,
                     });
                 });
-                return {marker, infoWindow};
+                return { marker, infoWindow };
             });
 
             // ------------------------
             // 線の設定
             // ------------------------
-
+            const lines = new google.maps.Polyline({
+                path: LocalVar.lstLocation.map((v) => {
+                    return {lat: v.lat, lng: v.lng}
+                }),
+                geodesic: false,
+                strokeColor: '#0000ff',
+                strokeOpacity: 1.0,
+                strokeWeight: 2,
+            });
+            lines.setMap(map);
         }
     </script>
 </head>
@@ -95,9 +104,7 @@
     <h1>googleMap api test</h1>
     <div id="map"></div>
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
-    <script
-        src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap&libraries=&v=weekly"
-        async></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCMO_Sf3zkwlpzB7pUqSXF3uKaBdjGQ9BE&callback=initMap&libraries=&v=weekly" async></script>
 
     <div id="info-template">
         <div>
@@ -109,4 +116,5 @@
         </div>
     </div>
 </body>
+
 </html>
