キーの削除

--- a/test1.html
+++ b/test1.html
@@ -104,7 +104,7 @@
     <h1>googleMap api test</h1>
     <div id="map"></div>
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCMO_Sf3zkwlpzB7pUqSXF3uKaBdjGQ9BE&callback=initMap&libraries=&v=weekly" async></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap&libraries=&v=weekly" async></script>
 
     <div id="info-template">
         <div>
